# adversarial-reasoning-attacks

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  FIXES.md  LICENSE  Makefile  README.md  STUDY_OVERVIEW.md  coverage.json  environment.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
configs/: _base.yaml  apgd_smoke.yaml  apgd_smoke_llava.yaml  apgd_smoke_paired.yaml  apgd_smoke_paired_llava.yaml  apgd_sweep.yaml  attacks.yaml  experiment.yaml  main_apgd.yaml  main_noise.yaml  main_pgd.yaml  main_targeted_tool.yaml  main_trajectory_drift.yaml  models.yaml  pgd_smoke.yaml  smoke.yaml  smoke_llava.yaml  smoke_sweep.yaml  targeted_tool_smoke.yaml  targeted_tool_smoke_llava.yaml  targeted_tool_smoke_paired.yaml  targeted_tool_sweep.yaml  tasks.yaml  trajectory_drift_smoke.yaml  trajectory_drift_smoke_llava.yaml  trajectory_drift_smoke_paired.yaml  trajectory_drift_sweep.yaml
configs/experiments/: baseline_internvl2.yaml  baseline_llava.yaml  baseline_llava13b.yaml  baseline_qwen.yaml  defended_internvl2.yaml  defended_internvl3.yaml  defended_llava.yaml  defended_llava13b.yaml  defended_llava_ov.yaml  defended_qwen.yaml  defended_qwen3.yaml  undefended_internvl3.yaml  undefended_llava_ov.yaml  undefended_qwen3.yaml
docs/: MAIN_BENCHMARK_RUNBOOK.md  PROJECT_REPORT.md  ethics.md  limitations.md  related_work.md  reproducibility.md  threat_model.md
docs/superpowers/plans/: 2026-05-06-v0.2.0-release.md
docs/superpowers/specs/: 2026-05-06-v0.2.0-release-design.md  2026-05-09-cot-eval-v1-design.md
paper/figures/attack_comparison/: summary.json
paper/figures/cross_model/: summary.json
scripts/: SCRIPTS_BOB_POLICY.md  __init__.py  _cli.py  _plotlib.py  _theme.py  backfill_cot_metrics.py  build_stats_table.py  cli.py  compare_attacks.py  compare_models.py  compare_pgd_noise.py  cot_null_distribution.py  download_models.sh  fetch_prostatex_cuocolo_cohort.py  make_attack_landscape.py  make_compare_figures.py  make_comprehensive_figures.py  make_figures.py  make_graph_figures.py  make_hero_figures.py  make_paper_figures.py  make_reasoning_flow_figures.py  plot_trajectory_length_before_after.py  prepare_datasets.sh  preprocess_prostatex2_dicom.py  reproduce_paper.sh  run_benchmark.sh  run_full_attack_pipeline.sh  run_main_benchmark.sh
scripts/attack_landscape/: __init__.py  _common.py  fig_cot_axis.py  fig_eps_curves.py  fig_landscape_overview.py  fig_radar.py  fig_tool_substitution.py  fig_violin_grid.py
scripts/compare/: __init__.py  attacks.py  models.py
scripts/comprehensive/: __init__.py  _common.py  graph10_step_occupancy.py  graph6_bipartite.py  graph7_divergence.py  graph8_tool_influence.py  graph9_layered_flow.py  stat1_overview.py  stat2_epsilon_sweep.py  stat3_trajectory_lengths.py  stat4_step_heatmap.py
scripts/dataprep/: __init__.py  backfill_cot_metrics.py  fetch_prostatex2_tcia.py  preprocess_prostatex2_dicom.py
scripts/dataprep/preprocess_prostatex2/: __init__.py  dicom_io.py  pipeline.py
scripts/diagnostics/: __init__.py  build_stats_table.py  cot_confusion_matrix.py  cot_null_distribution.py  plot_trajectory_length.py
scripts/graph_figures/: __init__.py  _common.py  graph1_transition_network.py  graph2_rewiring.py  graph3_radial_trajectories.py  graph4_sankey.py  graph5_similarity_matrix.py
scripts/hero/: __init__.py  _common.py  beeswarm.py  bento.py  cot_overlay.py  heatmap.py  radial.py  ridgeline.py
scripts/make/: __init__.py  attack_landscape.py  compare_figures.py  comprehensive_figures.py  figures.py  graph_figures.py  hero_figures.py  paper_figures.py  reasoning_flow_figures.py
scripts/paper_figures/: __init__.py  _common.py  fig1_main_result.py  fig2_trajectories.py  fig3_tool_heatmap.py  fig4_cross_model.py  fig5_attack_landscape.py
scripts/preprocess_prostatex2/: lesion_extract.py  pipeline.py
scripts/reasoning_flow/: __init__.py  _common.py  graph11_reasoning_paths.py  graph12_alluvial.py  graph13_transition_delta.py  graph14_reasoning_strips.py  graph15_multi_condition.py
src/adversarial_reasoning/: __init__.py  _text_utils.py  runner.py  types.py
src/adversarial_reasoning/agents/: __init__.py  base.py  medical_agent.py
src/adversarial_reasoning/attacks/: __init__.py  _epsilon.py  _loop.py  apgd.py  base.py  cw.py  loss.py  pgd.py  targeted_tool.py  targets.py  trajectory_drift.py
src/adversarial_reasoning/gates/: __init__.py  e2e_probe.py  gradient_masking.py  noise_floor.py  preprocessing_transfer.py
src/adversarial_reasoning/metrics/: __init__.py  cot.py  nli.py  stats.py  trajectory.py
src/adversarial_reasoning/models/: __init__.py  _attention.py  base.py  internvl2.py  llama_vision.py  llava.py  loader.py  ollama_client.py  qwen_vl.py
src/adversarial_reasoning/runner/: __init__.py  __main__.py  attacks.py  cli.py  config.py  records.py  schema.py
src/adversarial_reasoning/tasks/: __init__.py  loader.py
src/adversarial_reasoning/tools/: __init__.py  guidelines_db.py  pubmed_stub.py  registry.py  report_drafter.py  risk_scores.py  workflow_actions.py
tests/: conftest.py  test_agent_loop.py  test_apgd.py  test_attacks.py  test_backfill_cot_metrics.py  test_build_stats_table.py  test_cot_metrics.py  test_cot_sanity_scripts.py  test_coverage_gaps.py  test_gates.py  test_internvl2_query.py  test_loader_dispatch.py  test_loop.py  test_loss.py  test_nli.py  test_ollama_client.py  test_plotlib.py  test_preprocessing_transfer_extra.py  test_risk_scores.py  test_run_full_attack_pipeline.py  test_runner_attacks.py  test_runner_cli.py  test_runner_config.py  test_runner_schema.py  test_stats.py  test_targets.py  test_tasks_loader.py  test_tools.py  test_trajectory_drift_attack.py  test_trajectory_metrics.py  test_trajectory_record.py
